--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <script src="Script/Var.js"></script>
         <script src="Script/Const.js"></script>
 
+        <script src="Script/FunctionMath.js"></script>
         <script src="Script/FunctionPhysics.js"></script>
         <script src="Script/FunctionSave.js"></script>
         <script src="Script/FunctionDraw.js"></script>
